Fixed text wrapping on details.

--- a/static/css/simple_register_lookup_core.css
+++ b/static/css/simple_register_lookup_core.css
@@ -3,6 +3,7 @@ div.innerDetails
     display: none;
     margin-bottom: 10px;
     color: #505050;
+    white-space: normal; 
 }
 
 .dataTables_scrollBody
